# volbench

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  REFERENCES.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md  vix.csv
notebooks/: volbench.ipynb
report/: volbench_report.tex
results/: caviar.json  conditional_var.json  crypto.json  crypto_expanded.json  crypto_signature.json  economic.json  garch.json  har_family.json  ml.json  multivariate.json  regime.json  strategy.json  summary.json  transfer_matrix.json  validation.json  volare_futures.json  volare_fx.json  vrp.json
results/tables/: crypto_expanded_qlike_h1.csv  crypto_expanded_qlike_h22.csv  crypto_expanded_qlike_h5.csv  crypto_qlike_h1.csv  crypto_qlike_h22.csv  crypto_qlike_h5.csv  har_family_qlike_h1.csv  har_family_qlike_h22.csv  har_family_qlike_h5.csv  leaderboard_mse_h1.csv  leaderboard_mse_h22.csv  leaderboard_mse_h5.csv  leaderboard_qlike_h1.csv  leaderboard_qlike_h22.csv  leaderboard_qlike_h5.csv  ml_qlike_h1.csv  ml_qlike_h22.csv  ml_qlike_h5.csv  transfer_matrix.md  transfer_matrix_alpha_sensitivity.csv  transfer_matrix_mcs_h1.csv  transfer_matrix_mcs_h22.csv  transfer_matrix_refinement.csv  transfer_matrix_verdict.csv  volare_futures_qlike_h1.csv  volare_futures_qlike_h22.csv  (+4 more)
scripts/: audit_gc_h22.py  build_crypto.py  build_crypto_expanded.py  build_realized.py  build_transfer_matrix.py  build_vix.py  build_volare.py  make_figures.py  run_benchmark.py  run_caviar.py  run_conditional_var.py  run_crypto.py  run_crypto_expanded.py  run_economic.py  run_garch.py  run_har_family.py  run_ml.py  run_multivariate.py  run_regime.py  run_strategy.py  run_volare_futures.py  run_volare_fx.py  run_vrp.py  validate_estimators.py
tests/: test_backtest.py  test_caviar.py  test_conditional_var.py  test_crypto.py  test_data.py  test_deflated_sharpe.py  test_economic.py  test_evaluation.py  test_losses.py  test_ml.py  test_models.py  test_multivariate.py  test_realized.py  test_simulate.py  test_strategy.py  test_vrp.py
(+18 files in other folders)
