[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "volbench"
version = "0.1.0"
description = "A reproducible out-of-sample benchmark for realized-volatility forecasting"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Batuhan Boztepe" }]
keywords = ["volatility", "realized-variance", "HAR", "forecasting", "econometrics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "pandas>=1.5",
    "scikit-learn>=1.1",
    "matplotlib>=3.6",
    "statsmodels>=0.13",
    "arch>=5.3",
]

[project.optional-dependencies]
ml = ["lightgbm>=4.0", "xgboost>=2.0"]
# Optional data-fetch deps for the VOLARE cross-asset arms (scripts/build_volare.py).
data = ["python-dotenv>=1.0", "requests>=2.28"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.1", "mypy>=1.0", "lightgbm>=4.0", "xgboost>=2.0"]

[project.scripts]
volbench = "volbench.cli:main"

[project.urls]
Homepage = "https://github.com/batuhanboztepe0/volbench"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
volbench = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # Spurious FPU flags from Apple Accelerate BLAS matmul on NumPy 2 (results are
    # exact); see the note in src/volbench/__init__.py.
    "ignore:.*encountered in matmul:RuntimeWarning",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# The warnings filter must execute before the submodule imports it guards.
"src/volbench/__init__.py" = ["E402"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_ignores = false
